Ajout de la partie description

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
   <body>
     <!-- TITRE -->
     <h1 id="top-banner">Bienvenue dans cette formation GIT !</h1>
+
+    <div>
+      <h2>Ma Description</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+        dolores animi ullam illo iure nostrum.
+      </p>
+    </div>
   </body>
 </html>
