Ajout de la section Récompenses

--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
         dolores animi ullam illo iure nostrum.
       </p>
     </div>
+
+    <!-- RECOMPENSES -->
+    <div>
+      <h2>Mes récompenses</h2>
+      <p>en construction...</p>
+    </div>
   </body>
 </html>
