--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- RECOMPENSES -->
     <div>
       <h2>Mes récompenses</h2>
-      <p>en construction...</p>
+      <img src="images/medal_bronze.png" alt="medal_bronze" />
     </div>
   </body>
 </html>
