--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
         dolores animi ullam illo iure nostrum.
       </p>
+      <p>On travaille la !</p>
     </div>
 
     <!-- RECOMPENSES -->
