--- a/index.html
+++ b/index.html
@@ -26,5 +26,13 @@
       <h2>Mes récompenses</h2>
       <img src="images/medal_bronze.png" alt="medal_bronze" />
     </div>
+
+    <!-- COMMANDES GITS -->
+    <div>
+      <ul>
+        <li>Git Pull</li>
+        <li>Git Push</li>
+      </ul>
+    </div>
   </body>
 </html>
