Ajout de la commande git merge

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li>Git Pull</li>
         <li>Git Push</li>
         <li>Git Stash</li>
+        <li>Git Merge</li>
       </ul>
     </div>
   </body>
